--- a/notebooks/10_pca.ipynb
+++ b/notebooks/10_pca.ipynb
@@ -39,6 +39,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "627d072b-4439-4770-ae23-2488153278a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo $PYTHONPATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36926f83-845a-400f-91fd-fe40b31fd5d5",
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import lucy.io as io\n",
+    "#io.load_timeseries()\n",
+    "io.load_scib()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dabf2874-3e8b-4119-8e54-cba37e997558",
    "metadata": {},
@@ -53,10 +80,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zedata = [sc.read('/home/ubuntu/benchdata/'+data) for data in \"Immune_ALL_hum_mou.h5ad  Immune_ALL_human.h5ad  Lung_atlas_public.h5ad  human_pancreas_norm_complexBatch.h5ad\".split()]\n",
-    "batch,typ = Transpose (Map(lambda x:x.split(), 'batch final_annotation#batch final_annotation#batch cell_type#tech celltype'.split(\"#\")))\n",
+    "# zedata = [sc.read('/home/ubuntu/benchdata/'+data) for data in \"Immune_ALL_hum_mou.h5ad  Immune_ALL_human.h5ad  Lung_atlas_public.h5ad  human_pancreas_norm_complexBatch.h5ad\".split()]\n",
+    "# batch,typ = Transpose (Map(lambda x:x.split(), 'batch final_annotation#batch final_annotation#batch cell_type#tech celltype'.split(\"#\")))\n",
     "\n",
-    "zedata =  [[z[z.obs[b]==i] for i in z.obs[b].unique()] for z,b in zip(zedata, batch)]\n",
+    "# zedata =  [[z[z.obs[b]==i] for i in z.obs[b].unique()] for z,b in zip(zedata, batch)]\n",
+    "\n",
+    "datasets = io.load_scib() + io.load_timeseries()\n",
+    "\n",
     "\n",
     "def samplecopy(data,num, seed):\n",
     "    np.random.seed(seed) \n",
@@ -65,8 +95,10 @@
     "    r.obs_names_make_unique()\n",
     "    return r\n",
     "\n",
-    "ssdata = [[samplecopy(i,750,31442)  for i in series]  for series in zedata] \n",
-    "[cs.preprocess.annotate_genescore2(data,selector = 'cell_ranger', normrow = True, log = True) for data in ssdata]\n",
+    "ssdata = [[samplecopy(i,750,31442)  for i in series[:20]]  for series in datasets] \n",
+    "\n",
+    "[cs.preprocess.annotate_genescore2(data,selector = 'cell_ranger', normrow = True, log = True) \n",
+    " for data in ssdata]\n",
     "[[ sc.pp.normalize_total(d,1e4) for d in data] for data in ssdata]\n",
     "[[sc.pp.log1p(d) for d in data] for data  in ssdata]\n",
     "pass"
@@ -140,9 +172,14 @@
     "import mnnpy\n",
     "import umap\n",
     "\n",
+    "from hyperopt import fmin, tpe, hp, Trials\n",
+    "from hyperopt.pyll import scope\n",
     "    \n",
-    "def evalp(  x =None,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, scalecon = .25, pca = 40, connect = 100,nalg = 0):\n",
-    "    batch_,label = batch[x], typ[x]\n",
+    "def evalp(  x =None,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, \n",
+    "          scalecon = .25, \n",
+    "          pca = 40, connect = 100,nalg = 0):\n",
+    "    \n",
+    "    batch_,label = 'batch', 'label'\n",
     "    data = [z.copy() for z in ssdata[x]]\n",
     "    if umaps == 0:\n",
     "        merge = merg.Merge(data,umaps=[],oldcut=False, pca = pca)\n",
@@ -162,15 +199,31 @@
     "    score = nnpurity(sim,y)+2*silhouette_score(sim,y)\n",
     "    return score\n",
     "\n",
-    "def eva(z):\n",
-    "    score  = evalp(**z)\n",
-    "    z['score'] = score\n",
-    "    return z\n",
     "\n",
-    "re = ug.xmap(eva,[{'comp': 9, 'conns': 1, 'neighs': 16, 'outl': 0.8079195869285946, 'scal': 2,\n",
-    "                   'scalecon': 0.9365341951145691, 'umaps': 0.0, 'pca' : 40, 'x':x, 'connect':asd, 'nalg': nalg} \n",
-    "               for asd in Range(100,9,-10) for x in Range(ssdata) for nalg in [True,False]] )\n",
-    "\n"
+    "space3 = { \n",
+    "    'neighs' : scope.int(hp.quniform('neighs',3,25,1)),\n",
+    "    'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
+    "    'scal' : scope.int(hp.quniform('scal',1,5,1)),\n",
+    "    'comp' : scope.int(hp.quniform('comp',4,30,1)),\n",
+    "    'umaps' : scope.int(hp.quniform('umaps',0,20,5)),\n",
+    "    'scalecon' : hp.uniform('scalecon',.05,.95),\n",
+    "    'outl' : hp.uniform('outl',.5,.95),\n",
+    "    'nalg' : hp.choice ('nalg',[True, False]),\n",
+    "    'pca' : scope.int(hp.quniform('pca',30,50,1)),\n",
+    "    'connect' : scope.int(hp.quniform('connect',10,100,1))\n",
+    "}\n",
+    "\n",
+    "def eva(x):\n",
+    "    space3['x'] =  hp.choice ('x',[x]),\n",
+    "    trials3 = Trials()\n",
+    "    best = fmin(fn=evalp, algo=tpe.suggest,\n",
+    "                trials = trials3,\n",
+    "                space = space3, \n",
+    "                max_evals=40) \n",
+    "    print(best)\n",
+    "    return trials3, best\n",
+    "\n",
+    "re = ug.xmap(eva, Range(ssdata))\n"
    ]
   },
   {
@@ -178,12 +231,13 @@
    "execution_count": null,
    "id": "a0bc2666-33a8-4f34-9286-697a19fd1271",
    "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "re"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -208,7 +262,7 @@
     "import seaborn as sns\n",
     "data = pd.DataFrame(re)\n",
     "interest = 'connect'\n",
-    "sns.boxplot(data = data, x = interest, y= 'score')\n",
+    "sns.boxplot(data = data, x = interest, y= 'score', hue = 'nalg')\n",
     "plt.show()\n",
     "sns.scatterplot(data = data, x = interest, y= 'score', hue = 'x')\n",
     "plt.show() # was around .9 at best withthe other neighbor function.."
