--- a/notebooks/10_pca.ipynb
+++ b/notebooks/10_pca.ipynb
@@ -53,16 +53,13 @@
    "execution_count": null,
    "id": "36926f83-845a-400f-91fd-fe40b31fd5d5",
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "import lucy.io as io\n",
     "#io.load_timeseries()\n",
-    "io.load_scib()"
+    "# io.load_scib()"
    ]
   },
   {
@@ -95,7 +92,7 @@
     "    r.obs_names_make_unique()\n",
     "    return r\n",
     "\n",
-    "ssdata = [[samplecopy(i,750,31442)  for i in series[:20]]  for series in datasets] \n",
+    "ssdata = [[samplecopy(i,750,31442)  for i in series[:5]]  for series in datasets] \n",
     "\n",
     "[cs.preprocess.annotate_genescore2(data,selector = 'cell_ranger', normrow = True, log = True) \n",
     " for data in ssdata]\n",
@@ -171,14 +168,18 @@
     "import cellsaw as cs\n",
     "import mnnpy\n",
     "import umap\n",
-    "\n",
+    "import time\n",
     "from hyperopt import fmin, tpe, hp, Trials\n",
     "from hyperopt.pyll import scope\n",
     "    \n",
-    "def evalp(  x =None,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, \n",
+    "def evalp( x = 0,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75, \n",
     "          scalecon = .25, \n",
     "          pca = 40, connect = 100,nalg = 0):\n",
-    "    \n",
+    "    '''\n",
+    "    print('xx',x)\n",
+    "    if isinstance(x,tuple):\n",
+    "         x= x[0]\n",
+    "    '''\n",
     "    batch_,label = 'batch', 'label'\n",
     "    data = [z.copy() for z in ssdata[x]]\n",
     "    if umaps == 0:\n",
@@ -195,9 +196,12 @@
     "                                              scaling_threshold = scalecon,\n",
     "                                              dataset_similarity = (merge.similarity, connect, nalg))\n",
     "    sim = kernel.distmatrixumap(data,dist,components = comp)\n",
-    "    y = [ x for a in merge.data for x in a.obs[label] ]\n",
-    "    score = nnpurity(sim,y)+2*silhouette_score(sim,y)\n",
-    "    return score\n",
+    "    y = [ lab for a in merge.data for lab in a.obs[label] ]\n",
+    "    try:\n",
+    "        score = nnpurity(sim,y)+2*silhouette_score(sim,y)\n",
+    "    except:\n",
+    "        print('xxx:', x)\n",
+    "    return -score\n",
     "\n",
     "\n",
     "space3 = { \n",
@@ -205,39 +209,98 @@
     "    'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
     "    'scal' : scope.int(hp.quniform('scal',1,5,1)),\n",
     "    'comp' : scope.int(hp.quniform('comp',4,30,1)),\n",
-    "    'umaps' : scope.int(hp.quniform('umaps',0,20,5)),\n",
+    "    # 'umaps' : scope.int(hp.quniform('umaps',0,20,5)),\n",
     "    'scalecon' : hp.uniform('scalecon',.05,.95),\n",
     "    'outl' : hp.uniform('outl',.5,.95),\n",
     "    'nalg' : hp.choice ('nalg',[True, False]),\n",
     "    'pca' : scope.int(hp.quniform('pca',30,50,1)),\n",
-    "    'connect' : scope.int(hp.quniform('connect',10,100,1))\n",
+    "    'connect' : scope.int(hp.quniform('connect',10,70,1))\n",
     "}\n",
     "\n",
     "def eva(x):\n",
-    "    space3['x'] =  hp.choice ('x',[x]),\n",
+    "    # space3['x'] =  hp.choice ('x',[x]),\n",
+    "    # space3['x'] =  x\n",
     "    trials3 = Trials()\n",
-    "    best = fmin(fn=evalp, algo=tpe.suggest,\n",
+    "    start = time.time()\n",
+    "    best = fmin(fn=lambda y: evalp(x=x, **y), algo=tpe.suggest,\n",
     "                trials = trials3,\n",
     "                space = space3, \n",
-    "                max_evals=40) \n",
-    "    print(best)\n",
-    "    return trials3, best\n",
+    "                max_evals=1) \n",
+    "    return trials3, best, time.time() - start\n",
     "\n",
-    "re = ug.xmap(eva, Range(ssdata))\n"
+    "re = ug.xmap(eva, [8]*30)\n",
+    "ug.dumpfile(re,'test.delme')\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "from hyperopt import SparkTrials, fmin, hp, tpe, STATUS_OK\n",
+    "spark_trials = SparkTrials(parallelism= no. of cores)\n",
+    "best_hyperparameters = fmin(\n",
+    "  fn=train,\n",
+    "  space=search_space,\n",
+    "  algo=algo,\n",
+    "  max_evals=32)\n",
+    "'''\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e9e416b-6cb6-4c2e-9364-9e3a7a8c4c3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssdata[8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4f516b6-f56b-4fc3-ad40-55bec28127ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "datasets = io.load_timeseries()\n",
+    "zomg = lambda e:  [ not isinstance(z,str) for z in   e.obs['label'].to_list() ]\n",
+    "\n",
+    "def uni(e):\n",
+    "    return np.unique(e.obs['label'].to_list() )\n",
+    "    \n",
+    "\n",
+    "for i in Range(datasets):\n",
+    "    print (i)\n",
+    "    for e in datasets[i]:\n",
+    "        print(e.X.shape[0],sum(zomg(e)), uni(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "025d2e05-29c0-4cfb-abf8-fbf9ac1e12ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc0e9a50-2d81-4b5d-af71-b768bc642e8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a0bc2666-33a8-4f34-9286-697a19fd1271",
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Range(4)*3"
+   ]
   },
   {
    "cell_type": "code",
