--- a/notebooks/6_original_i_hope.ipynb
+++ b/notebooks/6_original_i_hope.ipynb
@@ -61,7 +61,6 @@
     "    r.obs_names_make_unique()\n",
     "    return r\n",
     "data = [[samplecopy(d,500) for d in z] for z in zedata]\n",
-    "'''\n",
     "\n",
     "\n",
     "# i think this was the way:\n",
@@ -77,7 +76,29 @@
     "    return r\n",
     "\n",
     "ssdata = [[samplecopy(i,750,1234)  for i in series]  for series in zedata]\n",
-    "\n"
+    "\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "def samplecopy(data,num, seed):\n",
+    "    np.random.seed(seed) \n",
+    "    obs_indices = np.random.choice(data.n_obs, size=num, replace=True) \n",
+    "    r =  data[obs_indices].copy()\n",
+    "    r.obs_names_make_unique()\n",
+    "    return r\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "from lucy import load\n",
+    "datasets = load.load_scib() + load.load_timeseries()\n",
+    "import cellsaw as cs\n",
+    "ssdata = [[load.samplecopy(i,750,314312)  for i in series[:2]]  for series in datasets] \n",
+    "[cs.preprocess.annotate_genescore2(data,selector = 'cell_ranger', normrow = True, log = True)  for data in ssdata]\n",
+    "[[ sc.pp.normalize_total(d,1e4) for d in data] for data in ssdata]\n",
+    "[[sc.pp.log1p(d) for d in data] for data  in ssdata]\n",
+    "pass"
    ]
   },
   {
@@ -190,9 +211,6 @@
    "execution_count": null,
    "id": "f6d6af76-c49a-4a5c-b5a4-62d6bb76479f",
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -213,21 +231,34 @@
     "\n",
     "def mnn(merge):\n",
     "    mnn = sc.external.pp.mnn_correct(*merge.data, n_jobs = None)\n",
-    "    X = umap.UMAP(n_components = 10,n_jobs =1).fit_transform(mnn[0].X)\n",
+    "    X = umap.UMAP(n_components = 3,n_jobs =1).fit_transform(mnn[0].X)\n",
     "    return X , \"MNN\", None\n",
     "\n",
-    "def mymethod(merge):\n",
+    "def lsa_integration(merge):\n",
     "    data = merge.projections[1]\n",
-    "    dist = kernel.linear_assignment_integrate(data )\n",
-    "    sim = kernel.distmatrixumap(data,dist,components = 10)\n",
+    "    dist = kernel.linear_assignment_integrate(data,\n",
+    "                                              intra_neigh = 15, \n",
+    "                                              inter_neigh = 4, \n",
+    "                                              scaling_num_neighbors = 2,\n",
+    "                                              outlier_threshold = .8,\n",
+    "                                              scaling_threshold = .5,\n",
+    "                                              dataset_similarity = (merge.similarity, 30, True))  \n",
+    "                # make percentile ..., \n",
+    "                # similarity -> add star-option to connect all datasets to the one of interest\n",
+    "                # overlay star and neighbor graph\n",
+    "                # rerun optimization with more weight on silhouette\n",
+    "                # there is a bug where genescores dont align with data when we merge a second time... \n",
+    "                \n",
+    "    sim = kernel.distmatrixumap(data,dist,components = 3)\n",
     "    return  sim, \"lsa_integration\",dist\n",
     "\n",
-    "methods = [mnn,mymethod]\n",
+    "methods = [lsa_integration,mnn]\n",
     "\n",
-    "def myscore(x):\n",
+    "def score_method(x):\n",
     "    start = time.time()\n",
     "    method, rownorm, item, pp, sgenes  = x\n",
-    "    batch_,label = batch[item], typ[item]\n",
+    "    #batch_,label = batch[item], typ[item]\n",
+    "    label ='label'\n",
     "    data = [z.copy() for z in ssdata[item]]\n",
     "    \n",
     "    # HVG normalized/unnormalized ROWNORM?\n",
@@ -240,7 +271,7 @@
     "    if rownorm:\n",
     "        [ sc.pp.normalize_total(d,1e4) for d in data]\n",
     "    \n",
-    "    [sc.pp.log1p(d) for d in data]\n",
+    "    data = [sc.pp.log1p(d) for d in data]\n",
     "    me = merg.Merge(data,umaps=[],oldcut=False, pca = 40, selectgenes = sgenes)\n",
     "    X ,methname, di  = method(me)\n",
     "    y = [ x   for a in me.data for x in a.obs[label] ]\n",
@@ -253,8 +284,8 @@
     "        a.update(b)\n",
     "        return a\n",
     "    \n",
-    "    if False:\n",
-    "        data = me.projections[2]\n",
+    "    if True:\n",
+    "        data = me.projections[1]\n",
     "        X2 = kernel.distmatrixumap(data,dist,components = 2)\n",
     "        plt.scatter(X2[:,0],X2[:,1], y)\n",
     "        plt.show()\n",
@@ -264,15 +295,11 @@
     "    return s,p \n",
     "\n",
     "\n",
-    "#myscore((mymethod,True,0,'cell_ranger'))\n",
+    "# myscore((mymethod,True,0,'cell_ranger'))\n",
     "\n",
-    "res_newscoring = ug.xmap(myscore,\n",
-    "                         [ (method,True,item,pp,2000) for method in methods\n",
-    "                                                      for item in Range(zedata)\n",
-    "                                                      for pp in ['cell_ranger']]+\n",
-    "                         [ (mymethod,True,item,'cell_ranger',3000) \n",
-    "                                                      for item in Range(zedata)])\n",
-    "\n"
+    "# res_newscoring = ug.xmap(score_method, [ (method,True,item,'cell_ranger',2000) for method in methods for item in Range(ssdata)])\n",
+    "\n",
+    "score_method((lsa_integration, True,7, 'cell_ranger', 2000))\n"
    ]
   },
   {
@@ -288,38 +315,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "433d9249-a665-4701-83d2-fe25807e56d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "297ce439-4eb4-4bc4-a84a-5352599cf767",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "642e0dd6-f0bf-4cfe-a5c3-74262b3898d4",
    "metadata": {},
    "source": [
     "# MY BOXPLOTS "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "868c5d8b-8098-48e7-9797-7ff6e36778cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for d in [a for aa in res_newscoring for a in aa][16:]:\n",
-    "    d['method'] = \"lsa3000\""
    ]
   },
   {
@@ -336,12 +336,17 @@
     "\n",
     "p = df2[df2.metric == 'purity']\n",
     "s = df2[df2.metric == 'silhouette']\n",
+    "sns.barplot(data = p, y= 'score', hue='method', x = 'dataset').set(title='acc')\n",
+    "plt.show()\n",
+    "sns.barplot(data = s, y= 'score', hue='method', x='dataset').set(title='silhou')\n",
+    "plt.show()\n",
     "\n",
-    "sns.boxplot(data = p, y= 'score', x='method').set(title='acc')\n",
+    "break\n",
+    "sns.boxplot(data = p, y= 'score', x='method', hue = 'dataset').set(title='acc')\n",
     "plt.show()\n",
-    "sns.boxplot(data = s, y= 'score', x='method').set(title='silhou')\n",
+    "sns.boxplot(data = s, y= 'score', x='method', hue='dataset').set(title='silhou')\n",
     "plt.show()\n",
-    "# so we do log1p and \n"
+    "\n"
    ]
   },
   {
