--- a/notebooks/8_opti_projection.ipynb
+++ b/notebooks/8_opti_projection.ipynb
@@ -85,6 +85,9 @@
    "execution_count": null,
    "id": "f6d6af76-c49a-4a5c-b5a4-62d6bb76479f",
    "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
