--- a/notebooks/8_opti_projection.ipynb
+++ b/notebooks/8_opti_projection.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "from sklearn.metrics import  silhouette_score\n",
     "import ubergauss.tools as ug\n",
-    "from natto.out.quality import clust as nnpurity \n",
+    "from lucy import lscore\n",
     "from cellsaw.merge.diffusion import kernel\n",
     "from cellsaw import merge as merg\n",
     "import cellsaw as cs\n",
@@ -118,7 +118,8 @@
     "                                               scaling_threshold = scalecon)\n",
     "    sim = kernel.distmatrixumap(data,dist,components = comp)\n",
     "    y = [ x for a in merge.data for x in a.obs[label] ]\n",
-    "    score = nnpurity(sim,y)+2*silhouette_score(sim,y)\n",
+    "    ybatch = [ x for a in merge.data for x in a.obs[batch_] ]\n",
+    "    score = lscore.neighbor_agreement(sim,y,5)+2*silhouette_score(sim,y)-lscore.neighbor_agreement(sim,ybatch,5)\n",
     "    return score\n",
     "\n",
     "def runall(params):\n",
@@ -342,7 +343,27 @@
    "id": "4c6ac4d6-504c-4a54-85ba-2da4c5be49ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "def repeat_as_column(a,n):\n",
+    "    return np.tile(a,(n,1)).T\n",
+    "    \n",
+    "arr = np.array([1, 2, 3])\n",
+    "n = 4\n",
+    "result = repeat_as_column(arr, n)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ab05053-4051-4e2f-9a49-7c66ab6862ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean([True,False4,])"
+   ]
   }
  ],
  "metadata": {
