suppress warning when subsampling

--- a/notebooks/11_lucyoptimize.ipynb
+++ b/notebooks/11_lucyoptimize.ipynb
@@ -32,9 +32,6 @@
    "execution_count": null,
    "id": "d86c4272-9551-470e-b7cb-33008ec78d6e",
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -42,7 +39,7 @@
     "from lucy import load, adatas\n",
     "\n",
     "datasets = load.load_scib() + load.load_timeseries()\n",
-    "ssdata = [[adatas.subsample(i,750,31442)  for i in series[:3]]  for series in datasets] \n",
+    "ssdata = [[adatas.subsample(i,750,31442)  for i in series[:10]]  for series in datasets] \n",
     "ssdata = Map(adatas.preprocess, ssdata)\n",
     "\n",
     "\n"
@@ -117,7 +114,7 @@
     "    'connect' : scope.int(hp.quniform('connect',10,100,1))\n",
     "}\n",
     "\n",
-    "trials = uopt.fffmin(evalp,items= Range(ssdata),probing_evals = 3, probing_parallel = 2,  after_evals = 15, space=space3)\n",
+    "trials = uopt.fffmin(evalp,items= Range(ssdata),probing_evals = 30, probing_parallel = 3,  after_evals = 100, space=space3)\n",
     "\n",
     "'''\n",
     "def xx(n):\n",
@@ -136,8 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for e in asd:\n",
-    "    assert 0 == sum(np.isnan(e)),e"
+    "[t.best_trial for t in trials]"
    ]
   },
   {
@@ -147,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a"
+    "dir(trials[0])"
    ]
   }
  ],
