--- a/notebooks/11_lucyoptimize.ipynb
+++ b/notebooks/11_lucyoptimize.ipynb
@@ -48,12 +48,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "75374a15-60a8-4296-95c8-89934d436f43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0f9fff28-f418-454a-965e-f933afa111a6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "'''\n",
     "for i,da in enumerate(ssdata):\n",
     "    print(\"asdasd\",i)\n",
@@ -68,9 +77,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f3ff6201-5ea7-44da-a7ba-a3f3af9e891a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "%%time \n",
     "from sklearn.metrics import  silhouette_score\n",
     "import ubergauss.tools as ug\n",
     "import time\n",
@@ -80,7 +95,8 @@
     "from ubergauss import hyperopt as uopt\n",
     "\n",
     "\n",
-    "def evalp( x = 0,neighs=5,conns=1, scal=1,comp=5,umaps = 0,outl = .75,  scalecon = .25,  pca = 40, connect = 100, nalg = 0):\n",
+    "def evalp( x = 0,neighs=10,conns=5, scal=1,comp=5,umaps = 0,outl = .75,\n",
+    "          scalecon = .25,  pca = 30, connect = 100, nalg = 0):\n",
     "    data = [z.copy() for z in ssdata[x]]\n",
     "    data = adatas.pca(data,dim = pca, label = 'pca')\n",
     "    dataset_adjacency = adatas.embed.make_adjacency(adatas.similarity(data), nalg, connect)\n",
@@ -93,6 +109,7 @@
     "                                              dataset_adjacency =  dataset_adjacency)#(adatas.similarity(data), connect, nalg)) # adjacency_matrix -> symmetrise and binarize \n",
     "    data = adatas.graph_embed(data,lsa_graph,n_components = comp, label = 'lsa')\n",
     "    data = adatas.stack(data)\n",
+    "    \n",
     "    y = data.obs['label'].tolist()\n",
     "    ybatch = data.obs['batch'].tolist()\n",
     "    sim = data.obsm['lsa']\n",
@@ -102,19 +119,23 @@
     "\n",
     "\n",
     "space3 = { \n",
-    "    'neighs' : scope.int(hp.quniform('neighs',10,25,1)),\n",
-    "    'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
+    "    #'neighs' : scope.int(hp.quniform('neighs',10,25,1)),\n",
+    "    #'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
     "    'scal' : scope.int(hp.quniform('scal',1,5,1)),\n",
     "    'comp' : scope.int(hp.quniform('comp',4,30,1)),\n",
     "    # 'umaps' : scope.int(hp.quniform('umaps',0,20,5)),  #  \n",
     "    'scalecon' : hp.uniform('scalecon',.05,.95),\n",
     "    'outl' : hp.uniform('outl',.5,.95),\n",
-    "    'nalg' : hp.choice ('nalg',[True, False]),\n",
-    "    'pca' : scope.int(hp.quniform('pca',30,50,1)),\n",
-    "    'connect' : scope.int(hp.quniform('connect',10,100,1))\n",
+    "    # 'nalg' : hp.choice ('nalg',[True, False]),\n",
+    "    # 'pca' : scope.int(hp.quniform('pca',30,50,1)),\n",
+    "    'connect' : scope.int(hp.quniform('connect',30,100,1))\n",
     "}\n",
     "\n",
-    "trials = uopt.fffmin(evalp,items= Range(ssdata),probing_evals = 30, probing_parallel = 3,  after_evals = 100, space=space3)\n",
+    "trials = uopt.fffmin(evalp, \n",
+    "                     items= Range(ssdata),\n",
+    "                     probing_evals = 30, \n",
+    "                     probing_parallel = 3,  \n",
+    "                     after_evals = 150, space=space3)\n",
     "\n",
     "'''\n",
     "def xx(n):\n",
@@ -133,18 +154,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[t.best_trial for t in trials]"
+    "asd = [t.best_trial['misc']['vals'] for t in trials]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d64eec9a-88f9-41f7-acbb-c1fd5b2b9bdd",
+   "id": "10e94ef4-26a5-4988-bee6-24fe2fab6256",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(trials[0])"
+    "import pandas as pd \n",
+    "pd.DataFrame(asd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76936913-dfeb-45fa-bc93-b08e90ec2d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for trial in trials:\n",
+    "    df = uopt.trial2df(trial)\n",
+    "    eeeh = np.argpartition(df['loss'], 10)[:10]\n",
+    "    print(df.iloc[eeeh]) \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "338f6eb9-7329-4365-8821-a6a789e00c3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df['loss']< -.04]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea78f4d4-97d1-4ca5-aba9-edf62fda6e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jjj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74ec87b2-5d0a-42b7-837d-b4975f76116e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e53e0cb-6901-423f-92f2-87b8be1dbc1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
