--- a/notebooks/9_PCA_MNN.ipynb
+++ b/notebooks/9_PCA_MNN.ipynb
@@ -24,7 +24,8 @@
     "mpl.rc(\"figure\", dpi=100)\n",
     "import numpy as np\n",
     "import jack\n",
-    "from lmz import *"
+    "from lmz import *\n",
+    "import ubergauss.tools as ut"
    ]
   },
   {
