--- a/notebooks/11_lucyoptimize.ipynb
+++ b/notebooks/11_lucyoptimize.ipynb
@@ -114,20 +114,21 @@
     "    ybatch = data.obs['batch'].tolist()\n",
     "    sim = data.obsm['lsa']\n",
     "    #return sim, dataset_adjacency\n",
-    "    score = lscore.neighbor_labelagreement(sim,y,5)+2*silhouette_score(sim,y)-lscore.neighbor_labelagreement(sim,ybatch,5)\n",
+    "    score = lscore.neighbor_labelagreement(sim,y,5)+\n",
+    "            5*silhouette_score(sim,y)-.5*lscore.neighbor_labelagreement(sim,ybatch,5)\n",
     "    return -score\n",
     "\n",
     "\n",
     "space3 = { \n",
-    "    #'neighs' : scope.int(hp.quniform('neighs',10,25,1)),\n",
-    "    #'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
+    "    'neighs' : scope.int(hp.quniform('neighs',10,25,1)),\n",
+    "    'conns' : scope.int(hp.quniform('conns',1,5,1)),\n",
     "    'scal' : scope.int(hp.quniform('scal',1,5,1)),\n",
     "    'comp' : scope.int(hp.quniform('comp',4,30,1)),\n",
-    "    # 'umaps' : scope.int(hp.quniform('umaps',0,20,5)),  #  \n",
+    "    'umaps' : scope.int(hp.quniform('umaps',0,20,5)),  #  \n",
     "    'scalecon' : hp.uniform('scalecon',.05,.95),\n",
     "    'outl' : hp.uniform('outl',.5,.95),\n",
-    "    # 'nalg' : hp.choice ('nalg',[True, False]),\n",
-    "    # 'pca' : scope.int(hp.quniform('pca',30,50,1)),\n",
+    "     # 'nalg' : hp.choice ('nalg',[True, False]),\n",
+    "    'pca' : scope.int(hp.quniform('pca',30,50,1)),\n",
     "    'connect' : scope.int(hp.quniform('connect',30,100,1))\n",
     "}\n",
     "\n",
@@ -153,9 +154,7 @@
    "id": "b011f868-5097-4a09-8447-78d9f7f54142",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "asd = [t.best_trial['misc']['vals'] for t in trials]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -165,7 +164,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "pd.DataFrame(asd)"
+    "pd.DataFrame(asd)\n",
+    "asd = [t.best_trial['misc']['vals'] for t in trials]"
    ]
   },
   {
